# skills-on-demand

./: .gitmodules  README.md  pyproject.toml
.github/workflows/: ci.yml
skills_on_demand/: __init__.py  server.py
tests/: test_search.py
