[project]
name = "skills-on-demand"
version = "0.1.0"
description = "MCP server — BM25 search over a folder of SKILL.md files"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rank-bm25",
    "mcp[cli]",
]

[project.scripts]
skills-on-demand = "skills_on_demand.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["skills_on_demand"]

[project.optional-dependencies]
dev = ["pytest"]
